Fri Jan 23 18:52:22 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/pattern.c: changed priority of template patterns
	  starting with '//' from 0.0 to 0.5 (Bug 131705)

Thu Jan 22 18:42:03 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: applied patch from Stefan Kost to fix
	  behaviour on unknown element from the XSLT namespace.
	* python/generator.py: applied patch from Stephane bidoul
	  to export enums in the bindings.

Thu Jan 22 10:35:14 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* tests/general/Makefile.am, tests/general/bug-141.out,
	  tests/general/bug-141.xsl, tests/docs/Makefile.am,
	  tests/general/bug-141.xml: added test case for
	  Bug 13971 (libxml2 xpath.c bug, but tested here)

Fri Jan 16 22:15:34 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/xsltutils.c: added a newline for any comment before
	  the root element (Bug 130433)
	* libxslt/xslt.c: fixed problem with cdata-section-elements when
	  default namespace is changed (Bug 130793)
	* tests/extensions/module.out, tests/general/bug-100.out: adjusted
	  for newline after comment change above.
	* tests/general/Makefile.am, tests/general/bug-140.xsl,
	  tests/general/Makefile.am, tests/docs/bug-140.xml: added test for
	  cdata-section-elements problem.

Wed Jan 14 16:44:58 CET 2004 Daniel Veillard <daniel@veillard.com>

	* python/libxsl.py: applied shared lib loading patch for OS X from
	  Gianni Ceccarelli

Wed Jan 14 14:28:02 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/math.c, libexslt/common.c: fixed problem,
	  reported on the list by Markus Bayerlein, concerning
	  math functions on nodesets generated with
	  exslt:node-set
	* tests/exslt/math/max.3.xsl, tests/exslt/math/max.3.xml,
	  tests/exslt/math/max.3.out, tests/exslt/math/Makefile.am:
	  added test case for above.

Tue Jan 13 00:33:50 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: changed to assure comment which
	  preceeds root node is output after DTD (Bug 130433)